chore: basic style form

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,9 @@
             "ignorePackages",
             {
               "ts": "never",
-              "tsx": "never"
+              "tsx": "never",
+              "js": "never",
+              "jsx": "never"
             }
         ]
     },
