--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
         "no-use-before-define": "off",
         "prettier/prettier": "error",
         "react/jsx-props-no-spreading": "off",
+        "react/jsx-one-expression-per-line": "off",
         "react/prop-types": "off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
