--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,10 +28,10 @@
         "no-use-before-define": "off",
         "prettier/prettier": "error",
         "react/jsx-props-no-spreading": "off",
+        "react/jsx-filename-extension": "off",
         "react/prop-types": "off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
-        "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
         "import/prefer-default-export": "off",
         "camelcase": "off",
         "@typescript-eslint/ban-types": "off",
